# ponts-paristech-projects

./: CMakeLists.txt  EffectifsDepartement.csv  ListeEleves.csv  README.md  ResultatsDepartement.xlsx  ResultatsRecherche.xlsx  VoeuxDepartement.csv  VoeuxRecherche.csv  align.cpp  align.h  ball.py  bille.cpp  bille.h  billiard.py  clustering.cpp  clustering.h  compare.cpp  compare.h  constants.h  distance.cpp  distance.h  dudh_fr.txt  grenouille.cpp  impactpositions.py  main.cpp  main.py  niveau.cpp  niveau.h  optimisation_recherche.py  outils.cpp  outils.h  requirements.txt  serpent.cpp  setup.cfg  tests.cpp  tests.h  text.cpp  text.h  trajectoire.h  trajectory.py  (+5 more)
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md
Zuma/: CMakeLists.txt  bille.cpp  bille.h  grenouille.cpp  grenouille.h  niveau.cpp  niveau.h  outils.cpp  outils.h  serpent.cpp  serpent.cpp.autosave  serpent.h  trajectoire.cpp  trajectoire.h  zuma.cpp
computer-vision/image-segmentation/mean-shift/: Meanshift_Image_Segmentation.ipynb  plot_mean_shift.ipynb
computer-vision/image-segmentation/normalized-cuts/: Avec une image.ipynb  Séparation de deux gaussiennes.ipynb
computer-vision/lloyd-convergence/lloyd_convergence/: CMakeLists.txt  glviewer.cpp  glviewer.h  lloyd.ui  main.cpp  options.h  options.ui  plotviewer.cpp  plotviewer.h  scene.h  ui_options.h  window.cpp  window.h
computer-vision/lloyd-convergence/lloyd_convergence-build/: CMakeCache.txt  Makefile  cmake_install.cmake  lloyd.cbp  lloyd_automoc.cpp  moc_glviewer.cpp  moc_options.cpp  moc_plotviewer.cpp  moc_window.cpp  ui_lloyd.h  ui_options.h
computer-vision/lloyd-convergence/lloyd_convergence/data/: cross.edg  key.edg  l.edg
computer-vision/lloyd-convergence/lloyd_convergence/include/: cdt.h  console_color.h  dt.h
computer-vision/markovian-image-restoration/: CMakeLists.txt  README.md
data/: EffectifsRecherche.csv  Parametres.csv  udhr_ar.txt  udhr_ch.txt  udhr_en.txt  udhr_es.txt
machine-learning/sdca/: README.md  SDCA.ipynb  malaptools.py
old/: bille.cpp  optimisation_departement.py  trajectoire.h
optimization/course-allocation/: README.md  requirements.txt
optimization/course-allocation/src/: model.py
optimization/text-matching/: CMakeLists.txt  README.md  align.cpp  compare.h  distance.h  main.cpp
programming/billiard-trajectory-prediction/: README.md  ball.py  billiard.py  impactpositions.py  main.py  requirements.txt  trajectory.py
programming/simple-zuma-game/: CMakeLists.txt  README.md  grenouille.h  serpent.h  trajectoire.cpp  zuma.cpp
programming/simple-zuma-game/old/: grenouille.cpp  trajectoire.cpp
quantitative-finance/covariance-selection/: Nesterov.py  PCA.py  covarianceMatrix.py  csvReader.py
results/: ResultatsDepartement.xlsx
src/: config.py  department.py  research.py  utils.py
trajectories/: direct.py  oneparallel.py  perpendicular.py  twoparallel.py
(+7 files in other folders)
